--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,35 @@
 
 
     <div class="main">
+
+      <section class="opening">
+        <h1 class="main-title">Hello my name is Greg Rawlinson, I'm a<br><span>UX/UI Designer</span></h1>
+      </section>
+
+      <section>
+        <h1>Multidisciplinary Design.</h1>
+        <p>UX/UI Designer with a background in graphic design, experience in development and famliar with working in design-led agile teams.</p>
+      </section>
+
+      <section>
+          <div class="kaha"></div>
+          <div class="br"></div>
+          <div class="loaf"></div>
+          <div class="yukfoo"></div>
+      </section>
+
+      <section>
+        <h1>More about me.</h1>
+        <p>Hello, my names Greg Rawlinson and I’m a multidisciplinary designer with a background in graphic design, who’s worked within design-led agile teams. My primary role is creating user experience stories and designing user interfaces that fulfill user, technical and business needs.</p>
+        <a class="twitter"></a>
+        <a class="linkedin"></a>
+        <a class="insta"></a>
+      </section>
+
+      <section>
+        <h2>Thanks for your time.</h2>
+        <p>Feel free to call me on +64 22 10857<br />or perhaps you’d rather email: <a href="mailto:sgregraw@hotmail.com" target="_top">gregraw@hotmail.com</a></p>
+      </section>
     
         
 
