--- a/app/index.html
+++ b/app/index.html
@@ -39,10 +39,26 @@
 
       <section class="projects">
 
-            <div class="project kaha"><!-- <img src="images/prev_kaha.jpg"> --><a class="button" href="">See Project</a></div><!-- 
-             --><div class="project br"><!-- <img src="images/prev_br.jpg"> --><a class="button" href="">See Project</a></div><!-- 
-             --><div class="project loaf"><!-- <img src="images/prev_loaf.jpg"> --><a class="button" href="">See Project</a></div><!-- 
-             --><div class="project yukfoo"><!-- <img src="images/prev_yukfoo.jpg"> --><a class="button" href="">See Project</a></div>
+            <div class="project kaha">
+                <img src="images/prev_kaha.jpg">
+                <a class="button" href="projects/kaha.html">See Project</a>
+                <div class="overlay"></div>
+            </div><!-- 
+         --><div class="project br">
+                <img src="images/prev_br.jpg">
+                <a class="button" href="">See Project</a>
+                <div class="overlay"></div>
+            </div><!-- 
+         --><div class="project loaf">
+                <img src="images/prev_loaf.jpg">
+                <a class="button" href="">See Project</a>
+                <div class="overlay"></div>
+            </div><!-- 
+         --><div class="project yukfoo">
+                <img src="images/prev_yukfoo.jpg">
+                <a class="button" href="">See Project</a>
+                <div class="overlay"></div>
+            </div>
 
       </section>
 
@@ -58,7 +74,7 @@
                   <desc>Created with Sketch.</desc>
                   <defs></defs>
                   <g id="Homepage" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                      <g id="1366-x-768-copy-20" transform="translate(-588.000000, -2707.000000)" fill="#101B28">
+                      <g id="twitbutton" transform="translate(-588.000000, -2707.000000)" fill="#101B28">
                           <g id="Group-4" transform="translate(571.000000, 2688.000000)">
                               <path d="M31.5796332,26.283849 L31.6427239,27.3404994 L30.5912129,27.2111137 C26.7637128,26.7151349 23.4199078,25.03312 20.580828,22.2081974 L19.1928335,20.8065183 L18.8353198,21.8416045 C18.0782318,24.1489839 18.5619269,26.5857491 20.1391934,28.2246355 C20.9804022,29.1303358 20.7911302,29.2597216 19.340045,28.7206142 C18.8353198,28.5480999 18.3936851,28.4187141 18.3516247,28.483407 C18.2044131,28.6343571 18.7091384,30.5967078 19.1087126,31.3730224 C19.6554983,32.4512371 20.7701,33.5078875 21.9898528,34.133252 L23.0203336,34.6292308 L21.8005808,34.6507951 C20.6228885,34.6507951 20.580828,34.6723594 20.7070094,35.1252095 C21.1276138,36.5268886 22.7890012,38.0148249 24.6396605,38.6617538 L25.9435342,39.1146039 L24.8079023,39.8046613 C23.1254847,40.7966189 21.148644,41.3572905 19.1718033,41.4004191 C18.2254434,41.4219834 17.4473252,41.5082406 17.4473252,41.5729334 C17.4473252,41.7885764 20.0130121,42.9961768 21.5061577,43.4705913 C25.9855946,44.8722704 31.3062404,44.2684702 35.3019822,41.8748336 C38.141062,40.1712543 40.9801417,36.7856602 42.3050456,33.5078875 C43.0200731,31.7611797 43.7351005,28.5696642 43.7351005,27.0385993 C43.7351005,26.0466418 43.7981912,25.917256 44.9758835,24.7312198 C45.6698808,24.0411624 46.3218176,23.2864121 46.447999,23.0707692 C46.6583012,22.6610476 46.6372709,22.6610476 45.5647297,23.0276406 C43.777161,23.6745694 43.5247983,23.5883123 44.4080676,22.617919 C45.0600044,21.9278616 45.8381226,20.6771326 45.8381226,20.3105396 C45.8381226,20.2458467 45.5226693,20.3536682 45.1651555,20.5477468 C44.7866116,20.7633898 43.9454027,21.0868542 43.3144961,21.2809328 L42.1788642,21.6475258 L41.1483834,20.9359041 C40.5805675,20.5477468 39.7814191,20.1164609 39.3608147,19.9870752 C38.2882735,19.6851751 36.6479163,19.7283036 35.6805262,20.0733323 C33.0517487,21.0437256 31.3903613,23.5451837 31.5796332,26.283849 Z" id="Shape"></path>
                           </g>
