--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
       <section class="intro">
         <div class="wrapper">
           <h1>Multidisciplinary Design.</h1>
-          <p>UX/UI Designer with a background in graphic design, experience in development, and working in design-led agile teams.</p>
+          <p>UX/UI Designer with a background in graphic design, experience in development, and used to working in design-led agile teams.</p>
         </div>
       </section>
 
