--- a/index.html
+++ b/index.html
@@ -26,22 +26,23 @@
 
       <section class="opening">
         <div class="wrapper">
-            <h1 class="main-title">GREG RAWLINSON<br><span>UX/UI DESIGNER</span></h1>
+            <h1 class="main-title">GREG RAWLINSON<br><span>UX/UI DESIGN</span></h1>
         </div>
       </section>
 
       <section class="intro">
         <div class="wrapper">
-          <h1>Multidisciplinary Design.</h1>
-          <p>UX/UI Designer with a background in graphic design, experience in development, and used to working in design-led agile teams.</p>
+          <h1>Multidisciplinary Designer.</h1>
+          <p>Hello, my name is Greg Rawlinson and I'm a UX/UI Designer with a background in graphic design, experience in development and enjoy working in design-led agile teams.</p>
         </div>
       </section>
 
       <section class="projects">
 
             <div class="project kaha">
-                <img src="dist/images/prev_kaha.jpg">
+                
                 <a class="button" href="dist/projects/kaha.html">See Project</a>
+                <img src="dist/images/prev_kaha.jpg">
                 <div class="overlay"></div>
             </div><!-- 
          --><div class="project br">
