--- a/index.html
+++ b/index.html
@@ -26,41 +26,34 @@
 
       <section class="opening">
         <div class="wrapper">
-            <h1 class="main-title">GREG RAWLINSON<br><span>UX/UI DESIGN</span></h1>
+            <h1 class="main-title">RAWLINSON<br><span>UX/UI DESIGN</span></h1>
         </div>
       </section>
 
       <section class="intro">
         <div class="wrapper">
           <h1>Multidisciplinary Designer.</h1>
-          <p>Hello, my name is Greg Rawlinson and I'm a UX/UI Designer with a background in graphic design, experience in development and enjoy working in design-led agile teams.</p>
+          <p>Hello, my name is Greg Rawlinson. I'm a UX/UI Designer with a background in graphic design, experience in development and I enjoy working in design-led agile teams.</p>
         </div>
       </section>
 
       <section class="projects">
-
             <div class="project kaha">
-                
                 <a class="button" href="dist/projects/kaha.html">See Project</a>
                 <img src="dist/images/prev_kaha.jpg">
-                <div class="overlay"></div>
             </div><!-- 
          --><div class="project br">
-                <img src="dist/images/prev_br.jpg">
                 <a class="button" href="">See Project</a>
-                <div class="overlay"></div>
+                <img src="dist/images/prev_br.jpg">
             </div><!-- 
          --><div class="project loaf">
-                <img src="dist/images/prev_loaf.jpg">
                 <a class="button" href="">See Project</a>
-                <div class="overlay"></div>
+                <img src="dist/images/prev_loaf.jpg">
             </div><!-- 
          --><div class="project yukfoo">
-                <img src="dist/images/prev_yukfoo.jpg">
                 <a class="button" href="">See Project</a>
-                <div class="overlay"></div>
+                <img src="dist/images/prev_yukfoo.jpg">
             </div>
-
       </section>
 
       <section class="more_about">
