--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
 
       <section class="opening">
         <div class="wrapper">
-            <h1 class="main-title">RAWLINSON<br><span>UX/UI DESIGN</span></h1>
+            <h1 class="main-title">Rawlinson<br><span>UX/UI DESIGN</span></h1>
         </div>
       </section>
 
       <section class="intro">
         <div class="wrapper">
-          <h1>Multidisciplinary Designer.</h1>
-          <p>Hello, my name is Greg Rawlinson. I'm a UX/UI Designer with a background in graphic design, experience in development and I enjoy working in design-led agile teams.</p>
+          <h1>Multidisciplinary Designer - trained in graphic design & coding. </h1>
+          <h2>Hello, my name is Greg Rawlinson, I'm a UX/UI Designer with a background in graphic design and experience in development. I enjoy working in design-led agile teams.</h2>
+         
         </div>
       </section>
 
@@ -58,7 +59,7 @@
 
       <section class="more_about">
         <div class="wrapper">
-          <h1>More about me.</h1>
+          <h1>I’m a designer who’s passion lies in all things digital and loves building brands & products.</h1>
           <p>Hello, my names Greg Rawlinson and I’m a multidisciplinary designer with a background in graphic design, who’s worked within design-led agile teams. My primary role is creating user experience stories and designing user interfaces that fulfill user, technical and business needs.</p>
           <div class="icons_container">
             <a class="twitter" href="https://twitter.com/gregraw?lang=en" target="blank">
@@ -114,7 +115,7 @@
       </section>
 
       <section class="contact">
-        <h2>Thanks for your time.</h2>
+        <h1>Thanks for your time.</h1>
         <p>Feel free to call me on +64 22 10857<br />or perhaps you’d rather email: <a href="mailto:sgregraw@hotmail.com" target="_top">gregraw@hotmail.com</a></p>
       </section>
     
