--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <section class="intro">
         <div class="wrapper">
           <h1>Multidisciplinary Designer - trained in graphic design & coding. </h1>
-          <h2>Hello, my name is Greg Rawlinson, I'm a UX/UI Designer with a background in graphic design and experience in development. I enjoy working in design-led agile teams.</h2>
+          <h2>Hello, my name is Greg Rawlinson, I'm a UX/UI Designer with a background in graphic design and experience in front-end development.</h2>
          
         </div>
       </section>
@@ -60,7 +60,7 @@
       <section class="more_about">
         <div class="wrapper">
           <h1>I’m a designer who’s passion lies in all things digital and loves building brands & products.</h1>
-          <p>Hello, my names Greg Rawlinson and I’m a multidisciplinary designer with a background in graphic design, who’s worked within design-led agile teams. My primary role is creating user experience stories and designing user interfaces that fulfill user, technical and business needs.</p>
+          <p>Currently working in Auckland as the lead UX/UI Designer for a startup company. I was initially brought in to help flesh out the initial concept and help in creating user stories and UX flows. To read more about what I do, please feel free to view my <a href="https://www.linkedin.com/in/gregoryrawlinson/" target="blank">linkedin profile</a>.</p>
           <div class="icons_container">
             <a class="twitter" href="https://twitter.com/gregraw?lang=en" target="blank">
                 <svg width="30px" height="26px" viewBox="0 0 30 26" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
