--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
       <section class="opening">
         <div class="wrapper">
-            <h1 class="main-title">Rawlinson<br><span>UX/UI DESIGN</span></h1>
+            <div class="main-title">Rawlinson<br><span>UX/UI DESIGN</span></div>
         </div>
       </section>
 
       <section class="intro">
         <div class="wrapper">
           <h1>Multidisciplinary Designer - trained in graphic design & coding. </h1>
-          <h2>Hello, my name is Greg Rawlinson, I'm a UX/UI Designer with a background in graphic design and experience in front-end development.</h2>
+          <p>Hello, my name is Greg Rawlinson, I'm a UX/UI Designer with a background in graphic design and experience in front-end development.</p>
          
         </div>
       </section>
@@ -52,7 +52,7 @@
                 <img src="dist/images/prev_loaf.jpg">
             </div><!-- 
          --><div class="project yukfoo">
-                <a class="button" href="">See Project</a>
+                <a class="button" href="dist/projects/yukfoo.html">See Project</a>
                 <img src="dist/images/prev_yukfoo.jpg">
             </div>
       </section>
@@ -60,7 +60,7 @@
       <section class="more_about">
         <div class="wrapper">
           <h1>I’m a designer who’s passion lies in all things digital and loves building brands & products.</h1>
-          <p>Currently working in Auckland as the lead UX/UI Designer for a startup company. I was initially brought in to help flesh out the initial concept and help in creating user stories and UX flows. To read more about what I do, please feel free to view my <a href="https://www.linkedin.com/in/gregoryrawlinson/" target="blank">linkedin profile</a>.</p>
+          <p>Currently working in Auckland as the lead UX/UI Designer for a startup company. I was initially brought in to help flesh out the initial concept and help in creating user stories and UX flows. To read more about what I do and what I've done, please feel free to view my <a href="https://www.linkedin.com/in/gregoryrawlinson/" target="blank">linkedin profile</a>.</p>
           <div class="icons_container">
             <a class="twitter" href="https://twitter.com/gregraw?lang=en" target="blank">
                 <svg width="30px" height="26px" viewBox="0 0 30 26" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
