--- a/index.html
+++ b/index.html
@@ -39,27 +39,31 @@
       </section>
 
       <section class="projects">
-            <div class="project kaha">
-                <a class="button" href="dist/projects/kaha.html">See Project</a>
-                <img src="dist/images/prev_kaha.jpg">
-            </div><!-- 
-         --><div class="project br">
-                <a class="button" href="">See Project</a>
-                <img src="dist/images/prev_br.jpg">
-            </div><!-- 
-         --><div class="project loaf">
-                <a class="button" href="">See Project</a>
-                <img src="dist/images/prev_loaf.jpg">
-            </div><!-- 
-         --><div class="project yukfoo">
-                <a class="button" href="dist/projects/yukfoo.html">See Project</a>
-                <img src="dist/images/prev_yukfoo.jpg">
-            </div>
+            <a class="project kaha" href="dist/projects/kaha.html">
+                <img class="logo_prev" src="dist/images/logo_kaha.svg">
+                <div class="overlay"></div>
+                <img class="backing_prev" src="dist/images/prev_kaha.jpg">
+            </a><!-- 
+         --><a class="project br" href="dist/projects/br.html">
+                 <img class="logo_prev" src="dist/images/logo_br.svg">
+                 <div class="overlay"></div>
+                <img class="backing_prev" src="dist/images/prev_br.jpg">
+            </a><!-- 
+         --><a class="project loaf"  href="dist/projects/loaf.html">
+         <img class="logo_prev" src="dist/images/logo_loaf.png">
+                 <div class="overlay"></div>
+                <img class="backing_prev" src="dist/images/prev_loaf.jpg">
+            </a><!-- 
+         --><a class="project yukfoo" href="dist/projects/yukfoo.html">
+                <img class="logo_prev" src="dist/images/logo_yukfoo.svg">
+                 <div class="overlay"></div>
+                <img class="backing_prev" src="dist/images/prev_yukfoo.jpg">
+            </a>
       </section>
 
       <section class="more_about">
         <div class="wrapper">
-          <h1>I’m a designer who’s passion lies in all things digital and loves building brands & products.</h1>
+          <h1>A designer who’s passion lies in all things digital and loves crafting brands & products.</h1>
           <p>Currently working in Auckland as the lead UX/UI Designer for a startup company. I was initially brought in to help flesh out the initial concept and help in creating user stories and UX flows. To read more about what I do and what I've done, please feel free to view my <a href="https://www.linkedin.com/in/gregoryrawlinson/" target="blank">linkedin profile</a>.</p>
           <div class="icons_container">
             <a class="twitter" href="https://twitter.com/gregraw?lang=en" target="blank">
