--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
 
 
     <div class="main">
+    
 
       <section class="opening">
       
         <div class="wrapper">
             <div class="main-title">Rawlinson<br><span>UX/UI DESIGN</span></div>
+        </div>
+        <div class="noise_container">
         </div>
       </section>
 
@@ -53,22 +56,27 @@
 
       <section class="projects">
             <a name="projects" class="project kaha" href="dist/projects/kaha.html">
+
                 <img class="logo_prev" src="dist/images/logo_kaha.svg">
+                <div class="noise_container"></div>
                 <div class="overlay"></div>
                 <img class="backing_prev" src="dist/images/prev_kaha.jpg">
             </a><!-- 
          --><a class="project br" href="dist/projects/br.html">
                  <img class="logo_prev" src="dist/images/logo_br.svg">
+                 <div class="noise_container"></div>
                  <div class="overlay"></div>
                 <img class="backing_prev" src="dist/images/prev_br.jpg">
             </a><!-- 
          --><a class="project loaf"  href="dist/projects/loaf.html">
-         <img class="logo_prev" src="dist/images/logo_loaf.png">
+               <img class="logo_prev" src="dist/images/logo_loaf.png">
+               <div class="noise_container"></div>
                  <div class="overlay"></div>
                 <img class="backing_prev" src="dist/images/prev_loaf.jpg">
             </a><!-- 
          --><a class="project yukfoo" href="dist/projects/yukfoo.html">
                 <img class="logo_prev" src="dist/images/logo_yukfoo.svg">
+                <div class="noise_container"></div>
                  <div class="overlay"></div>
                 <img class="backing_prev" src="dist/images/prev_yukfoo.jpg">
             </a>
