--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     <div class="main">
 
     <div class="menu_icon_container">
-              <div class="menu_icon">
-                <div class="menustrips">
-                    <div></div><!-- 
-                   --><div></div><!-- 
-                   --><div></div>
-                   </div>
-              </div>
-            </div>
+      <div class="menu_icon">
+        <div class="menustrips">
+            <div class="topstrip"></div><!-- 
+           --><div class="midstrip"></div><!-- 
+           --><div class="bottomstrip"></div>
+           </div>
+      </div>
+    </div>
 
 
     
@@ -50,13 +50,15 @@
     <div class="menu_overlay hidden">
       <div class="wrapper">
         <div class="menu_content_container">
-          <a class="menu_title" href="index.html">Rawlinson.</a>
-          <a class="menu_project_heading"  href="index.html#projects">PROJECTS</a>
+          <a class="menu_title" href="index.html">Rawlinson</a>
+          <div class="menu_project_heading" >
+            <a href="index.html#projects">PROJECTS</a>
+          </div>
           <ul class="menu_projects">
-            <li><a href="dist/projects/kaha.html">Kaha</a></li>
-            <li><a href="dist/projects/yukfoo.html">Yukfoo</a></li>
-            <li><a href="dist/projects/loaf.html">Loaf</a></li>
-            <li><a href="dist/projects/br.html">Beauty Review</a></li>
+            <li><a href="dist/projects/kaha.html">Kaha</a></li><!-- 
+             --><li><a href="dist/projects/yukfoo.html">Yukfoo</a></li><!-- 
+             --><li><a href="dist/projects/loaf.html">Loaf</a></li><!-- 
+             --><li><a href="dist/projects/br.html">Beauty Review</a></li>
           </ul>
           <ul class="menu_social">
           <li><a class="icon_link" href="https://www.linkedin.com/in/gregoryrawlinson/" target="blank"></a></li><!-- 
