Made the project names fixed when the user scrolls on the project page

--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
                   data-top-bottom="transform: translateY(20%);" 
                   data-bottom-top="transform: translateY(-25%);">
             </a>
-            <a class="prev_textblock">
+            <a class="prev_textblock"
+               data-anchor-target=".project.kaha"
+               data-center-top=""
+               data-center-bottom="">
               <div class="title">Kaha</div>
               <div class="year">2015-2017</div>
               <p class="description">UX/UI Designer as well as some front end development</p>
@@ -123,7 +126,10 @@
                   data-top-bottom="transform: translateY(20%);" 
                   data-bottom-top="transform: translateY(-25%);">
             </a>
-            <a class="prev_textblock">
+            <a class="prev_textblock"
+               data-anchor-target=".project.br"
+               data-center-top=""
+               data-center-bottom="">
               <div class="title">Beauty Review</div>
               <div class="year">2015-2017</div>
               <p class="description">UX/UI Designer as well as some front end development</p>
@@ -139,7 +145,10 @@
                   data-top-bottom="transform: translateY(20%);" 
                   data-bottom-top="transform: translateY(-25%);">
             </a>
-            <a class="prev_textblock">
+            <a class="prev_textblock"
+               data-anchor-target=".project.loaf"
+               data-center-top=""
+               data-center-bottom="">
               <div class="title">Loaf</div>
               <div class="year">2015-2017</div>
               <p class="description">UX/UI Designer as well as some front end development</p>
@@ -155,7 +164,10 @@
                   data-top-bottom="transform: translateY(20%);" 
                   data-bottom-top="transform: translateY(-25%);">
             </a>
-            <a class="prev_textblock">
+            <a class="prev_textblock"
+                data-anchor-target=".project.yukfoo"
+               data-center-top=""
+               data-center-bottom="">
               <div class="title">Yukfoo</div>
               <div class="year">2015-2017</div>
               <p class="description">UX/UI Designer as well as some front end development</p>
