--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
       <section class="more_about">
         <div class="wrapper">
-          <h1>Defining and designing digital products.</h1>
+          <h1>Defining & designing<br />digital products.</h1>
           <p>Currently working in Auckland as the lead UX/UI Designer for a startup company. I was initially brought in to help flesh out the initial concept and help in creating user stories and UX flows. To read more about what I do and what I've done, please view my <a class="underline" href="https://www.linkedin.com/in/gregoryrawlinson/" target="blank">linkedin profile</a>.</p>
           <div class="icons_container">
             <a class="twitter" href="https://twitter.com/gregraw?lang=en" target="blank">
