--- a/index.html
+++ b/index.html
@@ -98,18 +98,17 @@
       </section>
 
       <section class="projects">
-          <div class="prev_proj_container">
-            <a name="projects" class="project kaha" href="dist/projects/kaha.html">
-               <!--  <img class="logo_prev" src="dist/images/logo_kaha.svg"> -->
+          <div class="prev_proj_container kaha">
+            <a name="projects" class="project" href="dist/projects/kaha.html">
                 <div class="noise_container"></div>
                 <div class="overlay"></div>
                 <img class="backing_prev" src="dist/images/prev_kaha.jpg"
-                  data-anchor-target=".project.kaha"
+                  data-anchor-target=".prev_proj_container.kaha"
                   data-top-bottom="transform: translateY(20%);" 
                   data-bottom-top="transform: translateY(-25%);">
             </a>
             <a class="prev_textblock"
-               data-anchor-target=".project.kaha"
+               data-anchor-target=".prev_proj_container.kaha"
                data-center-top=""
                data-center-bottom="">
               <div class="title">Kaha</div>
@@ -117,60 +116,57 @@
               <p class="description">UX/UI Designer as well as some front end development</p>
             </a>
           </div>
-          <div class="prev_proj_container">
-            <a class="project br" href="dist/projects/br.html">
-               <!--  <img class="logo_prev" src="dist/images/logo_br.svg"> -->
+          <div class="prev_proj_container br">
+            <a class="project" href="dist/projects/br.html">
                 <div class="noise_container"></div>
                 <div class="overlay"></div>
                 <img class="backing_prev" src="dist/images/prev_br.jpg"
-                data-anchor-target=".project.br"
+                data-anchor-target=".prev_proj_container.br"
                   data-top-bottom="transform: translateY(20%);" 
                   data-bottom-top="transform: translateY(-25%);">
             </a>
             <a class="prev_textblock"
-               data-anchor-target=".project.br"
+               data-anchor-target=".prev_proj_container.br"
                data-center-top=""
                data-center-bottom="">
               <div class="title">Beauty Review</div>
-              <div class="year">2015-2017</div>
+              <div class="year">2014</div>
               <p class="description">UX/UI Designer as well as some front end development</p>
             </a>
           </div>
-          <div class="prev_proj_container">
-            <a class="project loaf"  href="dist/projects/loaf.html">
-                <!-- <img class="logo_prev" src="dist/images/logo_loaf.png"> -->
+          <div class="prev_proj_container  loaf">
+            <a class="project"  href="dist/projects/loaf.html">
                 <div class="noise_container"></div>
                 <div class="overlay"></div>
                 <img class="backing_prev" src="dist/images/prev_loaf.jpg"
-                data-anchor-target=".project.loaf"
+                data-anchor-target=".prev_proj_container.loaf"
                   data-top-bottom="transform: translateY(20%);" 
                   data-bottom-top="transform: translateY(-25%);">
             </a>
             <a class="prev_textblock"
-               data-anchor-target=".project.loaf"
+               data-anchor-target=".prev_proj_container.loaf"
                data-center-top=""
                data-center-bottom="">
               <div class="title">Loaf</div>
-              <div class="year">2015-2017</div>
+              <div class="year">2014</div>
               <p class="description">UX/UI Designer as well as some front end development</p>
             </a>
           </div>
-          <div class="prev_proj_container">
-            <a class="project yukfoo" href="dist/projects/yukfoo.html">
-                <!-- <img class="logo_prev" src="dist/images/logo_yukfoo.svg"> -->
+          <div class="prev_proj_container yukfoo">
+            <a class="project" href="dist/projects/yukfoo.html">
                 <div class="noise_container"></div>
                 <div class="overlay"></div>
                 <img class="backing_prev" src="dist/images/prev_yukfoo.jpg"
-                data-anchor-target=".project.yukfoo"
+                  data-anchor-target=".prev_proj_container.yukfoo"
                   data-top-bottom="transform: translateY(20%);" 
                   data-bottom-top="transform: translateY(-25%);">
             </a>
             <a class="prev_textblock"
-                data-anchor-target=".project.yukfoo"
-               data-center-top=""
-               data-center-bottom="">
+                data-anchor-target=".prev_proj_container.yukfoo"
+                data-center-top=""
+                data-center-bottom="">
               <div class="title">Yukfoo</div>
-              <div class="year">2015-2017</div>
+              <div class="year">2014</div>
               <p class="description">UX/UI Designer as well as some front end development</p>
             </a>
           </div>
@@ -179,7 +175,7 @@
 
       <section class="more_about">
         <div class="wrapper">
-          <h1>Defining & designing<br />digital products.</h1>
+          <h1>Defining & designing<br />digital experiences.</h1>
           <p>Currently working in Auckland as the lead UX/UI Designer for a startup company. I was initially brought in to help flesh out the initial concept and help in creating user stories and UX flows. To read more about what I do and what I've done, please view my <a class="underline" href="https://www.linkedin.com/in/gregoryrawlinson/" target="blank">linkedin profile</a>.</p>
           <div class="icons_container">
             <a class="twitter" href="https://twitter.com/gregraw?lang=en" target="blank">
