--- a/index.html
+++ b/index.html
@@ -112,10 +112,16 @@
                data-center-top=""
                data-center-bottom="">
               <div class="title">Kaha</div>
-              <div class="year">2015-2017</div>
-              <p class="description">UX/UI Designer as well as some front end development</p>
+              <div class="year">2015-2017 /kahasoftware</div>
+              <p class="description">I was the lead UX/UI Designer for this SaaS company. A cloud-based budgeting and scheduling solution for production companies.</p>
             </a>
           </div>
+          <div class="big_blocktext"
+                data-anchor-target=".prev_proj_container.kaha"
+                data-center-bottom="transform:translate(-5%,-70%);"
+                data-center-top="transform:translate(-10%,-50%);">Kaha</div>
+
+
           <div class="prev_proj_container br">
             <a class="project" href="dist/projects/br.html">
                 <div class="noise_container"></div>
@@ -130,10 +136,15 @@
                data-center-top=""
                data-center-bottom="">
               <div class="title">Beauty Review</div>
-              <div class="year">2014</div>
-              <p class="description">UX/UI Designer as well as some front end development</p>
+              <div class="year">2014 /bocapa.com</div>
+              <p class="description">New Zealand biggest online beauty guide. This was a website refresh/overhaul and I was the key designer and front-end developer.</p>
             </a>
+            <div class="big_blocktext"
+                data-anchor-target=".prev_proj_container.br"
+                data-center-bottom="transform:translate(-5%,-70%);"
+                data-center-top="transform:translate(-10%,-50%);">Beauty</div>
           </div>
+
           <div class="prev_proj_container  loaf">
             <a class="project"  href="dist/projects/loaf.html">
                 <div class="noise_container"></div>
@@ -148,10 +159,15 @@
                data-center-top=""
                data-center-bottom="">
               <div class="title">Loaf</div>
-              <div class="year">2014</div>
-              <p class="description">UX/UI Designer as well as some front end development</p>
+              <div class="year">2014 /bocapa.com</div>
+              <p class="description">New Zealands premium international bakery. The client came to us wanting a new website</p>
             </a>
+            <div class="big_blocktext"
+                data-anchor-target=".prev_proj_container.loaf"
+                data-center-bottom="transform:translate(-5%,-70%);"
+                data-center-top="transform:translate(-10%,-50%);">Loaf</div>
           </div>
+
           <div class="prev_proj_container yukfoo">
             <a class="project" href="dist/projects/yukfoo.html">
                 <div class="noise_container"></div>
@@ -166,9 +182,13 @@
                 data-center-top=""
                 data-center-bottom="">
               <div class="title">Yukfoo</div>
-              <div class="year">2014</div>
+              <div class="year">2014 /bocapa.com</div>
               <p class="description">UX/UI Designer as well as some front end development</p>
             </a>
+           <div class="big_blocktext"
+                data-anchor-target=".prev_proj_container.yukfoo"
+                data-center-bottom="transform:translate(-5%,-70%);"
+                data-center-top="transform:translate(-10%,-50%);">Yukfoo</div>
           </div>
              
       </section>
