--- a/index.html
+++ b/index.html
@@ -6,7 +6,30 @@
     <meta name="keywords" content="">
     <meta name="author" content="Greg Rawlinson">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Greg Rawlinson</title>
+
+
+
+
+
+
+    <link rel="apple-touch-icon" sizes="57x57" href="dist/images/favicon.ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="dist/images/favicon.ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="dist/images/favicon.ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="dist/images/favicon.ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="dist/images/favicon.ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="dist/images/favicon.ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="dist/images/favicon.ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="dist/images/favicon.ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="dist/images/favicon.ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="dist/images/favicon.ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="dist/images/favicon.ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="dist/images/favicon.ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="dist/images/favicon.ico/favicon-16x16.png">
+    <link rel="manifest" href="dist/images/favicon.ico/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
 
 
@@ -16,6 +39,9 @@
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
+
+
 
 
 
@@ -31,7 +57,7 @@
     </header>
 
 
-    <div class="main initialise">
+    <div class="main">
 
     <div class="menu_icon_container">
       <div class="menu_icon">
@@ -69,8 +95,16 @@
       </div>
     </div>
 
+    <div class="homepage_home"
+        data-anchor-target=".projects"
+        data-center-top=""
+        data-center-bottom="">
+      <div class="name-link">Rawlinson</div><!-- 
+       --><div class="breadcrumb hello">/ HELLO</div><!-- 
+       --><div class="breadcrumb project">/ PROJECTS</div><!-- 
+       --><div class="breadcrumb contact">/ CONTACT</div>
 
-    <div class="name-link">Rawlinson</div>
+    </div>
 
 
 
@@ -83,9 +117,9 @@
 
       
         <div class="wrapper">
-          <div class="title-container">
+          <div class="main-title-container">
             <div class="main-title">Rawlinson</div><!-- 
-             --><div class="sub-title">UX/UI DESIGNER</div>
+             --><div class="main-sub-title">UX/UI DESIGNER</div>
           </div>
             
         </div>
@@ -276,7 +310,7 @@
 
       <footer>
         <div class="wrapper">
-            <a class="footer_home" href="../../index.html">Rawlinson</a>
+<!--             <a class="footer_home" href="../../index.html">Rawlinson</a> -->
             <div class="contactdets">
               <a class="mobile" href="tel:+64 22 10857">022 1085795</a>
               <a class="email" href="mailto:sgregraw@hotmail.com" target="_top">gregraw@hotmail.com</a>
